runtime/manifests/runtime-install/runtime-podcert.yaml
# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Namespace
metadata:
  name: runtime-podcert-system
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: runtime-podcert
  namespace: runtime-podcert-system
  labels:
    app: runtime-podcert
spec:
  replicas: 1
  selector:
    matchLabels:
      app: runtime-podcert
  template:
    metadata:
      labels:
        app: runtime-podcert
    spec:
      containers:
      - name: controller
        image: ko://github.com/actordock/runtime/cmd/runtime-podcert
        args:
        - --in-cluster=true
        - --sharding-pod-namespace=$(POD_NAMESPACE)
        - --sharding-pod-name=$(POD_NAME)
        - --sharding-pod-uid=$(POD_UID)
        - --sharding-application-name=runtime-podcert
        - --service-dns-ca-pool=/run/ca-state/service-dns-pool.json
        - --pod-identity-ca-pool=/run/ca-state/pod-identity-pool.json
        volumeMounts:
        - name: "ca-state"
          mountPath: "/run/ca-state"
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          readOnlyRootFilesystem: true
      volumes:
      - name: "ca-state"
        projected:
          sources:
          - secret:
              name: "service-dns-ca-pool"
              items:
              - key: "pool"
                path: "service-dns-pool.json"
          - secret:
              name: "pod-identity-ca-pool"
              items:
              - key: "pool"
                path: "pod-identity-pool.json"
      dnsPolicy: Default
      nodeSelector:
        kubernetes.io/os: linux
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
