runtime/manifests/runtime-install/runtime-worker.yaml
# 4. Create DaemonSet
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: runtime-worker
  namespace: actordock-system
  labels:
    app: runtime-worker
spec:
  selector:
    matchLabels:
      app: runtime-worker
  template:
    metadata:
      labels:
        app: runtime-worker
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
    spec:
      serviceAccountName: runtime-worker
      containers:
      - name: runtime-worker
        image: ko://github.com/actordock/runtime/cmd/runtime-worker
        args:
        - --gcp-auth-for-image-pulls=true
        securityContext:
          privileged: true
        ports:
        - name: grpc
          containerPort: 8085
          hostPort: 8085
        - name: prometheus
          containerPort: 9090
          hostPort: 9090
          protocol: TCP
        volumeMounts:
        - name: run-runtime-sandbox
          mountPath: /var/lib/runtime-sandbox
      volumes:
      - name: run-runtime-sandbox
        hostPath:
          path: /var/lib/runtime-sandbox
          type: DirectoryOrCreate
