runtime/manifests/runtime-install/runtime-api.yaml
# 5. Deploy the API Server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: runtime-api
  namespace: actordock-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: runtime-api
  template:
    metadata:
      labels:
        app: runtime-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
    spec:
      serviceAccountName: runtime-api
      containers:
      - name: runtime-api
        image: ko://github.com/actordock/runtime/cmd/runtime-api
        args:
          - "--grpc-listen-addr=0.0.0.0:443"
          - "--grpc-server-cred-bundle=/run/servicedns.podcert.actordock.dev/credential-bundle.pem"
          - --redis-cluster-address=@env
          - --redis-ca-certs=/etc/valkey-ca/ca.crt
          - --redis-use-iam-auth=@env
          - --redis-tls-server-name=@env
          - --redis-client-cert=@env
          - --client-jwt-issuer=@env
          - --client-jwt-audience=api.actordock-system.svc
          - --session-id-jwt-pool=/run/session-id-jwt-pool/pool.json
          - --session-id-ca-pool=/run/session-id-ca-pool/pool.json
          - --workerpool-ca-certs=/run/workerpool-ca-certs/trust-bundle.pem
        volumeMounts:
        - name: "servicedns"
          mountPath: "/run/servicedns.podcert.actordock.dev"
        - name: "session-id-jwt-pool"
          mountPath: "/run/session-id-jwt-pool"
        # Note: See README.md for how to generate this secret.
        - name: "valkey-ca-certs"
          mountPath: "/etc/valkey-ca"
          readOnly: true
        - name: "session-id-ca-pool"
          mountPath: "/run/session-id-ca-pool"
          readOnly: true
        - name: "workerpool-ca-certs"
          mountPath: "/run/workerpool-ca-certs"
          readOnly: true
        ports:
        - containerPort: 443
        - name: prometheus
          containerPort: 9090
        readinessProbe:
          httpGet:
            path: /readyz
            port: 9090
          initialDelaySeconds: 5
          periodSeconds: 2
      volumes:
      - name: "servicedns"
        projected:
          sources:
          - podCertificate:
              signerName: servicedns.podcert.actordock.dev/identity
              keyType: ECDSAP256
              credentialBundlePath: credential-bundle.pem
      - name: "session-id-jwt-pool"
        projected:
          sources:
          - secret:
              name: "session-id-jwt-pool"
              items:
              - key: "pool"
                path: "pool.json"
      - name: "valkey-ca-certs"
        projected:
          sources:
          - secret:
              name: "valkey-ca-certs"
              items:
              - key: "ca.crt"
                path: "ca.crt"
      - name: "session-id-ca-pool"
        projected:
          sources:
          - secret:
              name: "session-id-ca-pool"
              items:
              - key: "pool"
                path: "pool.json"
      - name: "workerpool-ca-certs"
        projected:
          sources:
          - clusterTrustBundle:
              signerName: podidentity.podcert.actordock.dev/identity
              labelSelector:
                matchLabels:
                  podcert.actordock.dev/canarying: live
              path: trust-bundle.pem
---
# 6. Expose the Session Assigner
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: actordock-system
spec:
  type: ClusterIP
  selector:
    app: runtime-api
  ports:
  - name: grpc
    protocol: TCP
    port: 443
    targetPort: 443
