runtime/manifests/runtime-install/runtime-net-router.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: runtime-net-router
  namespace: actordock-system
  labels:
    app: runtime-net-router
spec:
  replicas: 1
  selector:
    matchLabels:
      app: runtime-net-router
  template:
    metadata:
      labels:
        app: runtime-net-router
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
    spec:
      serviceAccountName: runtime-net-router
      containers:
      - name: runtime-net-router
        image: ko://github.com/actordock/runtime/cmd/runtime-net
        args:
        - "router"
        - "--standalone"
        - "--namespace=actordock-system"
        - "--port-http=8080"
        - "--port-xds=18000"
        - "--port-extproc=50051"
        - "--extproc-address=127.0.0.1"
        - "--runtime-api-address=api.actordock-system.svc:443"
        - "--status-port=4040"
        - "--port-https=8443"
        - "--envoy-cert-path=/run/servicedns.podcert.actordock.dev/credential-bundle.pem"
        ports:
        - name: xds
          containerPort: 18000
        - name: extproc
          containerPort: 50051
        - name: status
          containerPort: 4040
        - name: metrics
          containerPort: 9090
      - name: envoy
        image: envoyproxy/envoy:v1.30-latest
        command:
        - "/usr/local/bin/envoy"
        - "-c"
        - "/etc/envoy/envoy.yaml"
        - "--component-log-level"
        - "upstream:debug,router:debug,ext_proc:debug"
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        - name: admin
          containerPort: 9901
        volumeMounts:
        - name: envoy-config
          mountPath: /etc/envoy
        - name: "servicedns"
          mountPath: "/run/servicedns.podcert.actordock.dev"
      volumes:
      - name: envoy-config
        configMap:
          name: runtime-net-router-envoy-config
      - name: "servicedns"
        projected:
          sources:
          - podCertificate:
              signerName: servicedns.podcert.actordock.dev/identity
              keyType: ECDSAP256
              credentialBundlePath: credential-bundle.pem
---
apiVersion: v1
kind: Service
metadata:
  name: runtime-net-router
  namespace: actordock-system
spec:
  type: ClusterIP
  selector:
    app: runtime-net-router
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: https
    port: 443
    targetPort: 8443
    protocol: TCP
